2017-04-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/files.c (libbalsa_icon_finder): more carefully check
	  names of extra mime icons.

2017-04-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* configure.ac: pass install directories on the compile command
	line instead of in config.h;
	* libbalsa/files.c: use the directories.

2017-04-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* configure.ac: fix a warning about changing the permissions
	  of a generated file
	* libbalsa/imap/Makefile.am: fix building outside the source
	  directory.

2017-04-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix access to local POP3 server

	* libbalsa/mailbox_pop3.c (libbalsa_mailbox_pop3_startup):
	  allow all auth methods, in order to allow connections to
	  localhost;
	* libnetclient/net-client-pop.c (net_client_pop_get_capa):
	  cosmetics

2017-04-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* configure.ac: replace --with-spell-checker=no with
	--with-spell-checker=internal.

2017-04-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix a bug in the SMTP code, and generally clean up;
	https://mail.gnome.org/archives/balsa-list/2017-April/msg00040.html

	* libnetclient/net-client-smtp.c (net_client_smtp_send_msg): do
	not set SMTP DSN parameters for a server not supporting it;
	(net_client_smtp_finalise): fix long delay when sending a
	message fails in the callback;
	* libnetclient/test/inetsim.conf:
	* libnetclient/test/start-test-env.sh.in:
	* libnetclient/test/tests.c (msg_data_cb), (test_smtp): improve
	SMTP unit tests; improve the test environment script as to
	place the results readable in the cwd.

2017-04-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove unused code

	* libbalsa/misc.c: remove unused function libbalsa_truncate_string;
	* libbalsa/misc.h: remove obsolete declarations.

2017-04-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Clean up identity code
